--- a/views/_scriptsTemplate.mustache
+++ b/views/_scriptsTemplate.mustache
@@ -3,3 +3,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+	if (window.location.href.indexOf('#_=_') > 0) {
+		window.location = window.location.href.replace(/#.*/, '');
+	}
+</script>
