--- a/views/home.mustache
+++ b/views/home.mustache
@@ -1,10 +1,17 @@
 <html>
 	<head>
 		<title> Welcome to Winnect </title>
-		{{>_bootstrap_template}}
+		{{>_scriptsTemplate}}
 	</head>
 	<body>
-		<h1> Welcome to Winnect </h1>
-		<p> Please pardon our dust </p>
+		{{>_navbarTemplate}}
+		<div class="wrapper" style="margin:0">
+			<div class="section" style="margin: 80px 0">
+				<div class="container">
+					<h1> Welcome to Winnect </h1>
+					<p> Please pardon our dust </p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
