--- a/views/_navbarTemplate.mustache
+++ b/views/_navbarTemplate.mustache
@@ -8,20 +8,26 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/admin"> Winnect </a>
+			<a class="navbar-brand" href="/user"> Winnect </a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"> Options <span class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li><a href="#"> Add/Change Logo </a></li>
+						<li><a href="#"> Add/Change Menu </a></li>
+						<li><a href="#"> Add/Change Color Themes </a></li>
+					</ul>
+				</li>
+				<li><a href="#">Preview</a></li>
+				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"> Admin <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="#">Add Logo</a></li>
-						<li><a href="#">Add Menu</a></li>
+						<li><a href="/user/stores"> View All Users </a></li>
 					</ul>
-					<li><a href="#">Preview</a></li>
-				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/login"> Sign Out </a></li>
